domkit: fix Checkbox.wrap padding with Label instance

--- a/src/domkit/fanCss/Checkbox.css
+++ b/src/domkit/fanCss/Checkbox.css
@@ -9,6 +9,7 @@
 input.domkit-Checkbox {
 }
 
+label input.domkit-Checkbox + span.domkit-Label,
 span.domkit-Checkbox-label {
   padding-left: 4px;
   -webkit-user-select: none;
